<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".TagActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/textShadow"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/label_demo_nfc"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/buttonStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonShare"
        android:layout_alignBottom="@+id/buttonShare"
        android:layout_alignRight="@+id/textViewTagNFC"
        android:background="@layout/mybutton"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonShare"
        style="@style/buttonStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTagNFC"
        android:layout_below="@+id/textViewTagNFC"
        android:layout_marginTop="34dp"
        android:background="@layout/mybutton"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/textViewTagNFC"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/contenu"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="108dp"
        android:layout_toRightOf="@+id/buttonShare"
        android:src="@drawable/mbds" />

    <CheckBox
        android:id="@+id/notifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonClear"
        android:layout_marginTop="38dp"
        android:text="@string/notification" />

</RelativeLayout>